# coin-auto-trading

./: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml
docs/: btcusdt_futures_bot_blueprint.md  btcusdt_futures_bot_blueprint_ko.md  implementation_workflow.md
docs/schemas/: trade_log_v1.schema.json
src/ai_auto_trading/: __init__.py  cli.py  models.py  schema_validation.py  settings.py
src/ai_auto_trading/ai/: __init__.py  comparison.py  gate.py  inference.py  local_server.py
tests/: test_ai_gate.py  test_backtest.py  test_cli.py  test_dashboard.py  test_features.py  test_hard_stop.py  test_historical.py  test_local_server.py  test_mark_price_recorder.py  test_models.py  test_paper_runtime.py  test_position_manager.py  test_profile_backtest_runner.py  test_rule_based_strategy.py  test_runtime_monitoring.py  test_runtime_profiles.py  test_schema_validation.py  test_settings.py  test_testnet_execution.py  test_testnet_runtime.py
tests/fixtures/: trade_record_rule_only.json
tools/: ablate_best_pair_v1.py  analyze_rule_timeframes.py  combine_bidirectional_profiles.py  compare_exit_policies.py  dashboard_smoke.mjs  explore_eth_combinations.py  search_rule_combinations.py  sweep_fixed_tp_rounds.py
tools/launchd/: com.ai-auto-trading.dashboard.plist  com.ai-auto-trading.local-ai.plist  com.ai-auto-trading.mainnet-loop.plist  com.ai-auto-trading.testnet-loop.plist  deploy_service_root.sh  run_local_ai_server.sh  run_mainnet_auto_cycle.sh  run_mainnet_dashboard.sh  run_testnet_auto_cycle.sh  run_testnet_dashboard.sh
(+25 files in other folders)
