[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-auto-trading"
version = "0.1.0"
description = "BTCUSDT futures auto trading bot scaffold"
readme = "docs/btcusdt_futures_bot_blueprint_ko.md"
requires-python = ">=3.9"
dependencies = ["pyarrow>=21.0.0", "websockets>=15.0.1"]

[project.scripts]
ai-auto-trading = "ai_auto_trading.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
